2009-01-19  Vadim Kurland  <vadim@vk.crocodile.org>

	* ProjectPanel_file_ops.cpp (ProjectPanel::autoSave): fixed bug
	#2499569: "fwbuilder crashes after some hours". The auto-save
	function now saves data file only if it has been
	modified. Frequent saves exasperate small memory leaks that appear
	in some old versions of libxml2.

2009-01-17  Vadim Kurland  <vadim@vk.crocodile.org>

	* FWWindowPrint.cpp (FWWindow::filePrint): fixed bug (no #): the
	GUI crashed if user tried to use File/Print function when no
	ruleset was opened in the right hand panel.

	* printerStream.cpp (printerStream::printQTable): Applied patch by
	Paul@Auroragrp.Com that fixes problems with printing long rule
	sets. If rule set printout exceeded the length of the page, some
	rules at the bottom were cut off and lost. The patch corrects the
	problem by taking into account printer dpi while calculating
	position for page breaks.

2009-01-11  vadim  <vadim@vk.crocodile.org>

	* unknown.xml.in: fixed bug #2486558 "firewall platform "unknown"
	should support basic actions".

2009-01-10  vadim  <vadim@vk.crocodile.org>

	* DiscoveryDruid.cpp (DiscoveryDruid::loadDataFromCrawler): bug
	#2023261 "IPv6 - SNMP discovery of interfaces not working for
	IPv6". SNMP discovery can now read IPv6 addresses of interfaces
	using IP-MIB RFC4293. Not all snmp agents support this MIB, for
	example only recent versions of net-snmp support it.

	* starting with v3.0.4 build 739 snmp discovery is supported on
	Windows.

2009-01-06  vadim  <vadim@vk.crocodile.org>

	* RoutingCompiler_iosacl_writers.cpp (PrintRule::PrintRule): fixes
	to make code compile on Windows.

2009-01-05  vadim  <vadim@vk.crocodile.org>

	* RoutingCompiler_cisco.cpp (RoutingCompiler_cisco::compile):
	fixed bug (no #): routing compiler for pix refused to add more
	than one routing rule with an error saying that other rules were
	duplicates. Error was introduced in build 732.

2009-01-02  vadim  <vadim@vk.crocodile.org>
